--- a/static/style.css
+++ b/static/style.css
@@ -102,7 +102,6 @@ h1 {
 .menuNQcm .liste table{
     width: 44em;
 }
-
 .menuNQcm h1{
     padding:0em;
     margin: 0;
@@ -281,13 +280,10 @@ footer {
     text-decoration: none;
 }
 
-.nav-list li a:hover{
-    transform: scale(1.5);
-}
-
 /* Lorsqu'on passe le curseur dessus */
 .nav-list li a:hover {
     background-color: #111;
+    transform: scale(1.5);
 }
 
 /* Colore en rouge, le bouton de la page actuelle */
@@ -295,10 +291,32 @@ footer {
     background-color: darkred;
 }
 
-/* taille de l'icone pour supprimer une réponse */
+/* Taille de l'icone pour modifier/supprimer une réponse */
 .imgTab {
     width: 1.5vw;
     height: 1.5vw;
+}
+
+/* Animation "secouage" des icones */
+.imgTab:hover{
+    animation: shake 0.75s;
+}
+@keyframes shake{
+    0%{
+        transform: rotate(0deg);
+    }
+    25%{
+        transform: rotate(-25deg);
+    }
+    50%{
+        transform: rotate(25deg);
+    }
+    75%{
+        transform: rotate(-10deg);
+    }
+    100%{
+        transform: rotate(0deg);
+    }
 }
 
 /* CSS de checkbox réponse (voir références) */
@@ -475,6 +493,7 @@ fieldset {
     font-style: italic;
 }
 
+/* Classe menu pour les questions ouvertes */
 .ouverte {
     border: 0.5em solid black;
     border-radius: 10px;
@@ -488,21 +507,6 @@ fieldset {
     text-align: center;
     background-color: whitesmoke;
 }
-
-/* test
-
-label {
-    display: block;
-    margin-top: 1em;
-}
-
-input:valid {
-    background-color: palegreen;
-}
-
-input:invalid {
-    background-color: lightpink;
-} */
 
 /* ------------------------------------------------------------------ */
 /* Responsivité *//* Responsivité *//* Responsivité *//* Responsivité */
@@ -634,6 +638,7 @@ input:invalid {
     }
     .menuNQcm{
         margin-left: 2em;
+        font-size: 0.8em;
     }
 }
 
