--- a/templates/liste/lQCM.html
+++ b/templates/liste/lQCM.html
@@ -57,6 +57,7 @@
                     {% for etiquette in etiquettes %}
                     <li style="float: left;width: 33%;"><label>{{ etiquette.nom }}</label>
                         <input type="hidden" name="etiquette_id[]" value="{{ etiquette.idE }}">
+                        <input style="width:3em" type="number" name="etiquettes_ordre[{{etiquette.idE}}]" value="0" min="0" max="{{ etiquette.questions }}" required>
                         <input style="width:3em" type="number" name="nb_questions_min[{{etiquette.idE}}]" value="0" min="0" max="{{ etiquette.questions }}" required>
                         <input style="width:3em" type="number" name="nb_questions_max[{{etiquette.idE}}]" value="0" min="0" max="{{ etiquette.questions }}" required>
                         </li>  
