--- a/templates/wooclap/repondreQCM.html
+++ b/templates/wooclap/repondreQCM.html
@@ -36,9 +36,8 @@
     })
 </script>
 {% endblock %} {% block main %}
-<span id='code'>{{code}}</span>
-<div class="menu">
-    <p id="rien">Il n'y a rien ici pour le moment</p>
+<span id='code' hidden=true>{{code}}</span>
+<div class="menu">En attente de validation de l'enseignant </p>
     <form>
         <h1 id="enonce" name="enonce"></h1>
 
