Question ouverte : envoie des données selon le prof [non terminé]

--- a/templates/ouverte/reponseOuverte.html
+++ b/templates/ouverte/reponseOuverte.html
@@ -7,9 +7,11 @@
 {% block main %}
 <div class="ouverte">
     <h1>Votre réponse</h1>
+    <h2>Entrez le nom du professeur qui vous pose la question</h2>
     <h3>(Répondez ce qui vous passe par la tête...)</h3>
     <hr/>
     <form action="/reponse-ouverte" method="POST">
+        <p><input name="nomP" type="text" placeholder="Nom du prof"</p>
         <p><input name="reponse" type="text" placeholder="Entrez votre réponse ici"/></p>
         <p><input class="button" type="submit" value="J'envoie !" onClick="loading()"/></p>
     </form>
