Question ouverte : [Terminé] réception des données selon le prof, vérification eleve/professeur ...

--- a/templates/ouverte/nuage.html
+++ b/templates/ouverte/nuage.html
@@ -18,6 +18,7 @@
 {% endblock %}
 
 {% block main %}
+<span id="nomDuProf" style="display: none;">{{session['nomU']}}</span> <!-- Pour récupérer le nom du professeur dans nuage.js -->
 <div id="container"></div>
 
 <script src="static/nuage.js"></script>
