--- a/templates/liste/lQCM.html
+++ b/templates/liste/lQCM.html
@@ -66,6 +66,7 @@
         <form action="/createRandom" method="POST">
             <h1>Nouveau Controle</h1>
             <p>Nombre de contrôles souhaités : <input style="width:49.3px" type="number" name="num_qcm" min="1" placeholder="0" required></p>
+            <p>Nombre de questions souhaités : <input style="width:49.3px" type="number" name="nb_quest" min="1" placeholder="0" required></p>
             <p>Nom des contrôles : <input style="width:149.3px" type="text" name="nom_qcm" placeholder="Nom" required></p>
             <fieldset><legend>Choisir étiquettes</legend>
                 <ul style="list-style-type: none;">
