--- a/templates/wooclap/AttenteConnexionEtudiant.html
+++ b/templates/wooclap/AttenteConnexionEtudiant.html
@@ -15,6 +15,7 @@
         <input type="text" id='{{listeQuestions}}' name="ARecup" value='{{listeQuestions}}' readonly hidden=true>
         <input type="text" id='{{listeReponses}}' name="ARecup" value='{{listeReponses}}' readonly hidden=true>
         <input type="text" id='{{typeElement}}' name="ARecup" value='{{typeElement}}' readonly hidden=true>
+        <input type="text" id='{{idRep}}' name="ARecup" value='{{idRep}}' readonly hidden=true>
         <!-- idElement,listeQuestions,listeReponses,typeElement,page -->
         <button>C'est Parti</button>
     </form>
