--- a/templates/liste/lQCM.html
+++ b/templates/liste/lQCM.html
@@ -63,7 +63,7 @@
             </div>
             <p><input class="button" type="submit" value="Confirmer" /></p>
         </form>
-        <form action="/createRandom" method="POST">
+        <form action="/createRandom" method="POST"> <!-- Génération de contrôles -->
             <h1>Nouveau Controle</h1>
             <p>Nombre de contrôles souhaités : <input style="width:49.3px" type="number" name="num_qcm" min="1" placeholder="0" required></p>
             <p>Nombre de questions souhaités : <input style="width:49.3px" type="number" name="nb_quest" min="1" placeholder="0" required></p>
